--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -54,8 +54,7 @@
     }
    },
    "source": [
-    "I decided to solve this challenge using the Azure cloud, more specifially using an Azure Blob storage for the JSON file, using an Azure Key Vault to store any type of secrets, and finally using Azure Databricks as my data engineering platform of choice, thanks to its great capabilities. \n",
-    "As I am aware, that LATAM Airlines operates on GCP, I would change my storage solution to Google Cloud Storage and my Key Vault solution to Google Secret Manager. As Databricks is a multi-cloud platform that operates on Azure, AWS, and GCP, we can keep that service. "
+    "I decided to solve this challenge using the Azure cloud, specifically leveraging Azure Blob Storage to store the JSON file, Azure Key Vault to securely manage secrets, and Azure Databricks as the data engineering platform due to its powerful data processing capabilities. Recognizing that LATAM Airlines operates on GCP, I would adapt my approach by using Google Cloud Storage and Google Secret Manager as alternatives to Azure services. Databricks, being a multi-cloud platform compatible with Azure, AWS, and GCP, remains suitable for this solution on GCP."
    ]
   },
   {
@@ -114,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -q memory_profiler py-spy emoji polars"
+    "%pip install -q emoji polars memray"
    ]
   },
   {
@@ -160,9 +159,11 @@
     "from src.q2_time import q2_time\n",
     "from src.q3_memory import q3_memory\n",
     "from src.q3_time import q3_time\n",
-    "from memory_profiler import profile, memory_usage\n",
     "import polars as pl\n",
-    "import time"
+    "import time\n",
+    "import logging\n",
+    "import os\n",
+    "import memray"
    ]
   },
   {
@@ -205,8 +206,7 @@
     "storage_account_name = dbutils.secrets.get(scope=\"kv-scope\", key=\"storage-account-name\")\n",
     "container_name = \"data\"\n",
     "mount_point = \"/mnt/data\"\n",
-    "file_path = \"farmers-protest-tweets-2021-2-4.json\"\n",
-    "dbfs_file_path = f\"/dbfs{mount_point}/{file_path}\""
+    "file_path = \"farmers-protest-tweets-2021-2-4\""
    ]
   },
   {
@@ -264,6 +264,120 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "830ee37b-e4fa-4a89-b366-8328f2fecd76",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "To enhance performance and efficiency, I chose to transform the JSON file into a Parquet file format. Parquet is a columnar storage format optimized for analytical queries, which improves read speed and reduces storage costs by compressing data. This choice enables faster data processing, especially for querying subsets of data, which is highly beneficial in handling large datasets like this one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "22101c35-d8b1-41d9-a085-5d44c3662620",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Set up logging\n",
+    "logging.basicConfig(level=logging.WARNING, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "logger = logging.getLogger(\"JSON_to_Parquet\")\n",
+    "\n",
+    "def convert_json_to_parquet(input_path: str, output_path: str, overwrite: bool = True):\n",
+    "    \"\"\"\n",
+    "    Converts a JSON file to Parquet format using PySpark.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    input_path : str\n",
+    "        The path to the input JSON file.\n",
+    "    output_path : str\n",
+    "        The path where the Parquet file will be saved.\n",
+    "    overwrite : bool, optional\n",
+    "        If True, overwrites the existing Parquet file. Defaults to True.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "\n",
+    "        logger.info(f\"Reading JSON file from {input_path}\")\n",
+    "        json_df = spark.read.json(input_path)\n",
+    "        \n",
+    "        logger.info(f\"Writing DataFrame to Parquet at {output_path}\")\n",
+    "        json_df.write.mode(\"overwrite\").parquet(output_path)\n",
+    "        \n",
+    "        logger.info(\"Conversion completed successfully.\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"An error occurred during JSON to Parquet conversion: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0c6a4c5f-7d76-47dc-89fc-76cd2bed2922",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "convert_json_to_parquet(\n",
+    "    input_path=f\"{mount_point}/{file_path}.json\",\n",
+    "    output_path=f\"{mount_point}/{file_path}.parquet\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e11f5b25-a0c9-4f43-9c3b-163e31acdb83",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "json_file_path = f\"/dbfs{mount_point}/{file_path}.json\"\n",
+    "parquet_file_path = f\"/dbfs{mount_point}/{file_path}.parquet/*.parquet\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "0e05c6a8-f02d-448a-b30d-855f7d1b1b9a",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -290,7 +404,7 @@
     }
    },
    "source": [
-    "Generally speaking, in this challenge, I chose Polars over PySpark and Pandas dataframes due to its superior performance and efficiency in handling large data sets. While Pandas is a popular choice for data manipulation, it is significantly slower and more memory-intensive, especially for large JSON files, making it the least suitable option here. PySpark is powerful for distributed data processing, but in this case, its initialization and processing overheads resulted in slower performance compared to Polars. Additionally, for memory-optimized functions, I opted to read the JSON file row by row to avoid loading the entire file into memory, which allows for more efficient memory usage. Polars’ lightweight, efficient DataFrame operations, combined with this row-by-row approach, enabled me to achieve both speed and memory efficiency."
+    "Generally speaking for data manipulation and transformation, I selected Polars over PySpark and Pandas due to its performance advantages with large datasets. While Pandas is commonly used for data analysis, it’s more memory-intensive and slower with large files, making it less suitable here. PySpark, though excellent for distributed data processing, introduced initialization and processing overheads that slowed performance in this specific context. Polars, with its efficient and lightweight DataFrame operations, proved faster and more memory-efficient. Additionally, for memory-optimized functions, I opted to read the JSON file row by row, avoiding loading the entire file into memory. This row-by-row approach, combined with Polars’ efficiency, allowed me to meet both speed and memory constraints effectively."
    ]
   },
   {
@@ -330,7 +444,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q1_memory(dbfs_file_path)\n",
+    "result = q1_memory(json_file_path)\n",
     "result"
    ]
   },
@@ -371,7 +485,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q1_time(dbfs_file_path)\n",
+    "result = q1_time(parquet_file_path)\n",
     "result"
    ]
   },
@@ -412,7 +526,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q2_memory(dbfs_file_path)\n",
+    "result = q2_memory(json_file_path)\n",
     "result"
    ]
   },
@@ -453,7 +567,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q2_time(dbfs_file_path)\n",
+    "result = q2_time(parquet_file_path)\n",
     "result"
    ]
   },
@@ -494,7 +608,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q3_memory(dbfs_file_path)\n",
+    "result = q3_memory(json_file_path)\n",
     "result"
    ]
   },
@@ -535,7 +649,7 @@
    },
    "outputs": [],
    "source": [
-    "result = q3_time(dbfs_file_path)\n",
+    "result = q3_time(parquet_file_path)\n",
     "result"
    ]
   },
@@ -574,7 +688,9 @@
     }
    },
    "source": [
-    "I want to create a single DataFrame that displays two metrics—average memory usage and execution time—for each function, presented in a compact format with each function as a row. To achieve this, I first call each function with the @profile decorator to measure memory usage. Then, I call each function a second time without profiling to measure execution time. Separating the calls for memory profiling and timing ensures that the metrics do not interfere with each other, thus avoiding skewed data. I decided to set the interval paremter to 0.5, meaning that every half a second a snapshot for analysis is taken. Previously I had it at 0.1, which resulted in a long execution of about 23 minutes."
+    "To provide clear insights into each function’s performance, I created a DataFrame summarizing two key metrics: peak memory usage and execution time. Each function is represented as a row, making the results easy to compare.\n",
+    "\n",
+    "The approach involves two separate runs for each function. In the first run, I use Memray to track memory usage and capture the peak memory consumption, ensuring we identify the highest memory demand during the function’s execution. In the second run, I measure execution time independently to avoid any potential overhead from memory profiling, resulting in more accurate timing metrics. This separation of memory and execution profiling prevents interference between metrics, allowing for a clean and reliable performance analysis."
    ]
   },
   {
@@ -587,7 +703,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "97b0d7e9-6ec5-4712-ac65-6b2dd78450c1",
+     "nuid": "0ec748e8-6232-4c2f-b281-ba91d112a4c0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -595,24 +711,56 @@
    },
    "outputs": [],
    "source": [
-    "functions_to_profile = [\n",
-    "    q1_memory, q1_time, \n",
-    "    q2_memory, q2_time, \n",
-    "    q3_memory, q3_time\n",
-    "]\n",
-    "\n",
-    "# Helper function to measure memory usage only\n",
+    "memory_functions = [q1_memory, q2_memory, q3_memory]\n",
+    "time_functions = [q1_time, q2_time, q3_time]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "491f797d-5cfe-446e-8fb6-d64930cecdfd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "def measure_memory(func, *args, **kwargs):\n",
-    "    # Decorate the function with @profile in memory-only mode\n",
-    "    profiled_func = profile(func)\n",
-    "    mem_usage = memory_usage((profiled_func, args, kwargs), interval=0.5, retval=False)\n",
-    "    avg_memory = sum(mem_usage) / len(mem_usage)\n",
-    "    return avg_memory\n",
+    "    # Define the output file for memray\n",
+    "    output_file = f\"{func.__name__}_memray.bin\"\n",
+    "    \n",
+    "    # Remove the output file if it already exists to avoid conflicts\n",
+    "    if os.path.exists(output_file):\n",
+    "        os.remove(output_file)\n",
+    "    \n",
+    "    # Run the function with memray tracking\n",
+    "    with memray.Tracker(output_file, native_traces=True):\n",
+    "        func(*args, **kwargs)\n",
+    "    \n",
+    "    # Analyze the memray data to find peak memory usage\n",
+    "    peak_memory = 0\n",
+    "    reader = memray.FileReader(output_file)\n",
+    "    for record in reader.get_allocation_records():\n",
+    "        peak_memory = max(peak_memory, record.size)\n",
+    "    \n",
+    "    os.remove(output_file)\n",
+    "    \n",
+    "    # Convert bytes to MiB\n",
+    "    peak_memory_mib = peak_memory / (1024 ** 2)\n",
+    "    \n",
+    "    return peak_memory_mib\n",
     "\n",
-    "# Helper function to measure execution time only\n",
     "def measure_time(func, *args, **kwargs):\n",
     "    start_time = time.time()\n",
-    "    func(*args, **kwargs)  # Run function without profiling\n",
+    "    func(*args, **kwargs)\n",
     "    end_time = time.time()\n",
     "    execution_time = end_time - start_time\n",
     "    return execution_time\n",
@@ -620,35 +768,27 @@
     "# Initialize list to store results\n",
     "metrics_list = []\n",
     "\n",
-    "# Run profiling for each function and store the results in the list\n",
-    "for func in functions_to_profile:\n",
-    "    avg_memory = measure_memory(func, dbfs_file_path)  # Measure memory usage\n",
-    "    execution_time = measure_time(func, dbfs_file_path)  # Measure execution time without profiling\n",
+    "# Run profiling for memory-based functions (using JSON file)\n",
+    "for func in memory_functions:\n",
+    "    avg_memory = measure_memory(func, json_file_path)  # Measure memory usage with JSON file\n",
+    "    execution_time = measure_time(func, json_file_path)  # Measure execution time with JSON file\n",
     "    metrics_list.append({\n",
     "        \"Function Name\": func.__name__,\n",
-    "        \"Average Memory Usage (MiB)\": round(avg_memory, 2),\n",
+    "        \"Peak Memory Usage (MiB)\": round(avg_memory, 2),\n",
     "        \"Execution Time (seconds)\": round(execution_time, 2)\n",
-    "    })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "884c019d-b81f-4bf8-a005-0bc15378e916",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "    })\n",
+    "\n",
+    "# Run profiling for time-based functions (using Parquet file)\n",
+    "for func in time_functions:\n",
+    "    avg_memory = measure_memory(func, parquet_file_path)  # Measure memory usage with Parquet file\n",
+    "    execution_time = measure_time(func, parquet_file_path)  # Measure execution time with Parquet file\n",
+    "    metrics_list.append({\n",
+    "        \"Function Name\": func.__name__,\n",
+    "        \"Peak Memory Usage (MiB)\": round(avg_memory, 2),\n",
+    "        \"Execution Time (seconds)\": round(execution_time, 2)\n",
+    "    })\n",
+    "\n",
+    "# Convert the list of metrics to a Polars DataFrame\n",
     "metrics_df = pl.DataFrame(metrics_list)\n",
     "print(metrics_df)"
    ]
