Include cell outputs
- changed notebook level setting to send cell outputs to git

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -111,7 +111,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -q emoji polars memray"
    ]
@@ -292,7 +301,6 @@
    },
    "outputs": [],
    "source": [
-    "# Set up logging\n",
     "logging.basicConfig(level=logging.WARNING, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "logger = logging.getLogger(\"JSON_to_Parquet\")\n",
     "\n",
@@ -442,7 +450,28 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(datetime.date(2021, 2, 19), 'Preetm91'),\n",
+       " (datetime.date(2021, 2, 18), 'neetuanjle_nitu'),\n",
+       " (datetime.date(2021, 2, 17), 'RaaJVinderkaur'),\n",
+       " (datetime.date(2021, 2, 13), 'MaanDee08215437'),\n",
+       " (datetime.date(2021, 2, 12), 'RanbirS00614606'),\n",
+       " (datetime.date(2021, 2, 21), 'Surrypuria'),\n",
+       " (datetime.date(2021, 2, 23), 'Surrypuria'),\n",
+       " (datetime.date(2021, 2, 15), 'jot__b'),\n",
+       " (datetime.date(2021, 2, 16), 'jot__b'),\n",
+       " (datetime.date(2021, 2, 14), 'rebelpacifist')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = q1_memory(json_file_path)\n",
     "result"
@@ -483,7 +512,28 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(datetime.date(2021, 2, 19), 'Preetm91'),\n",
+       " (datetime.date(2021, 2, 18), 'neetuanjle_nitu'),\n",
+       " (datetime.date(2021, 2, 17), 'RaaJVinderkaur'),\n",
+       " (datetime.date(2021, 2, 13), 'MaanDee08215437'),\n",
+       " (datetime.date(2021, 2, 12), 'RanbirS00614606'),\n",
+       " (datetime.date(2021, 2, 21), 'Surrypuria'),\n",
+       " (datetime.date(2021, 2, 23), 'Surrypuria'),\n",
+       " (datetime.date(2021, 2, 15), 'jot__b'),\n",
+       " (datetime.date(2021, 2, 16), 'jot__b'),\n",
+       " (datetime.date(2021, 2, 14), 'rebelpacifist')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = q1_time(parquet_file_path)\n",
     "result"
@@ -524,7 +574,28 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('🙏', 7286),\n",
+       " ('😂', 3072),\n",
+       " ('🚜', 2972),\n",
+       " ('✊', 2411),\n",
+       " ('🌾', 2363),\n",
+       " ('🏻', 2080),\n",
+       " ('❤', 1779),\n",
+       " ('🤣', 1668),\n",
+       " ('🏽', 1218),\n",
+       " ('👇', 1108)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = q2_memory(json_file_path)\n",
     "result"
@@ -565,7 +636,28 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('🙏', 7286),\n",
+       " ('😂', 3072),\n",
+       " ('🚜', 2972),\n",
+       " ('✊', 2411),\n",
+       " ('🌾', 2363),\n",
+       " ('🏻', 2080),\n",
+       " ('❤', 1779),\n",
+       " ('🤣', 1668),\n",
+       " ('🏽', 1218),\n",
+       " ('👇', 1108)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = q2_time(parquet_file_path)\n",
     "result"
@@ -606,7 +698,28 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('narendramodi', 2265),\n",
+       " ('Kisanektamorcha', 1840),\n",
+       " ('RakeshTikaitBKU', 1644),\n",
+       " ('PMOIndia', 1427),\n",
+       " ('RahulGandhi', 1146),\n",
+       " ('GretaThunberg', 1048),\n",
+       " ('RaviSinghKA', 1019),\n",
+       " ('rihanna', 986),\n",
+       " ('UNHumanRights', 962),\n",
+       " ('meenaharris', 926)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = q3_memory(json_file_path)\n",
     "result"
@@ -647,7 +760,28 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('narendramodi', 2265),\n",
+       " ('Kisanektamorcha', 1840),\n",
+       " ('RakeshTikaitBKU', 1644),\n",
+       " ('PMOIndia', 1427),\n",
+       " ('RahulGandhi', 1146),\n",
+       " ('GretaThunberg', 1048),\n",
+       " ('RaviSinghKA', 1019),\n",
+       " ('rihanna', 986),\n",
+       " ('UNHumanRights', 962),\n",
+       " ('meenaharris', 926)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = q3_time(parquet_file_path)\n",
     "result"
@@ -731,7 +865,24 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Memray WARNING: Correcting symbol for malloc from 0x41f780 to 0xffff9cdad640\nMemray WARNING: Correcting symbol for free from 0x41ffa0 to 0xffff9cdadbd4\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (6, 3)\n┌───────────────┬─────────────────────────┬──────────────────────────┐\n│ Function Name ┆ Peak Memory Usage (MiB) ┆ Execution Time (seconds) │\n│ ---           ┆ ---                     ┆ ---                      │\n│ str           ┆ f64                     ┆ f64                      │\n╞═══════════════╪═════════════════════════╪══════════════════════════╡\n│ q1_memory     ┆ 1.0                     ┆ 3.55                     │\n│ q2_memory     ┆ 0.5                     ┆ 3.58                     │\n│ q3_memory     ┆ 0.4                     ┆ 3.15                     │\n│ q1_time       ┆ 96.0                    ┆ 1.35                     │\n│ q2_time       ┆ 17.05                   ┆ 0.72                     │\n│ q3_time       ┆ 17.05                   ┆ 0.67                     │\n└───────────────┴─────────────────────────┴──────────────────────────┘\n"
+     ]
+    }
+   ],
    "source": [
     "def measure_memory(func, *args, **kwargs):\n",
     "    # Define the output file for memray\n",
